--- a/vs/Gicame/Gicame/Gicame.vcxproj
+++ b/vs/Gicame/Gicame/Gicame.vcxproj
@@ -368,10 +368,13 @@
     <ClInclude Include="..\..\..\headers\network\TcpListeningSocket.h" />
     <ClInclude Include="..\..\..\headers\network\TcpSocket.h" />
     <ClInclude Include="..\..\..\headers\os\ErrorHandling.h" />
+    <ClInclude Include="..\..\..\headers\reflection\Comparable.h" />
+    <ClInclude Include="..\..\..\headers\reflection\Property.h" />
     <ClInclude Include="..\..\..\headers\rpc\RerBuilding.h" />
     <ClInclude Include="..\..\..\headers\rpc\RpcClient.h" />
     <ClInclude Include="..\..\..\headers\rpc\RpcCommon.h" />
     <ClInclude Include="..\..\..\headers\rpc\RpcServer.h" />
+    <ClInclude Include="..\..\..\headers\serialization\Tree.h" />
     <ClInclude Include="..\..\..\headers\sm\Semaphore.h" />
     <ClInclude Include="..\..\..\headers\sm\SharedMemory.h" />
     <ClInclude Include="framework.h" />
