Little refactor to split common.h
Little refactor to split common.h and avoid unwanted declaration seen by clients programs

--- a/vs/Gicame/Gicame/Gicame.vcxproj
+++ b/vs/Gicame/Gicame/Gicame.vcxproj
@@ -385,6 +385,9 @@
     <ClInclude Include="..\..\..\headers\sm\SharedMemory.h" />
     <ClInclude Include="..\..\..\headers\stream\ByteStream.h" />
     <ClInclude Include="..\..\..\headers\stream\MemoryStream.h" />
+    <ClInclude Include="..\..\..\headers\utils\Memory.h" />
+    <ClInclude Include="..\..\..\headers\utils\MovableButNotCopyable.h" />
+    <ClInclude Include="..\..\..\headers\utils\Numbers.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
