--- a/vs/Gicame/Gicame/Gicame.vcxproj
+++ b/vs/Gicame/Gicame/Gicame.vcxproj
@@ -353,6 +353,7 @@
     <ClInclude Include="..\..\..\headers\concurrency\implementation_details\SPSCQueueMeta.h" />
     <ClInclude Include="..\..\..\headers\concurrency\SLSPSCQueue.h" />
     <ClInclude Include="..\..\..\headers\concurrency\SPSCQueue.h" />
+    <ClInclude Include="..\..\..\headers\concurrency\TaskExecutor.hpp" />
     <ClInclude Include="..\..\..\headers\dataSerialization\BinarySerializer.h" />
     <ClInclude Include="..\..\..\headers\dataTransfer\BinaryInstanceExchanger.h" />
     <ClInclude Include="..\..\..\headers\dataTransfer\BinaryInstanceReceiver.h" />
@@ -395,6 +396,7 @@
     <ClCompile Include="..\..\..\src\common.cpp" />
     <ClCompile Include="..\..\..\src\concurrency\SLSPSCQueue.cpp" />
     <ClCompile Include="..\..\..\src\concurrency\SPSCQueue.cpp" />
+    <ClCompile Include="..\..\..\src\concurrency\TaskExecutor.cpp" />
     <ClCompile Include="..\..\..\src\device\Serial.cpp" />
     <ClCompile Include="..\..\..\src\network\NetworkDefinitions.cpp" />
     <ClCompile Include="..\..\..\src\network\NetworkUtility.cpp" />
