--- a/vs/Gicame/Gicame/Gicame.vcxproj
+++ b/vs/Gicame/Gicame/Gicame.vcxproj
@@ -387,7 +387,7 @@
     <ClInclude Include="..\..\..\headers\stream\ByteStream.h" />
     <ClInclude Include="..\..\..\headers\stream\MemoryStream.h" />
     <ClInclude Include="..\..\..\headers\utils\Memory.h" />
-    <ClInclude Include="..\..\..\headers\utils\MovableButNotCopyable.h" />
+    <ClInclude Include="..\..\..\headers\utils\NotCopyable.h" />
     <ClInclude Include="..\..\..\headers\utils\Numbers.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
