--- a/vs/Gicame/Gicame/Gicame.vcxproj.filters
+++ b/vs/Gicame/Gicame/Gicame.vcxproj.filters
@@ -204,6 +204,12 @@
     <ClInclude Include="..\..\..\headers\dataTransfer\TextSender.h">
       <Filter>File di intestazione\dataTransfer</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\headers\concurrency\InterprocessSignal.h">
+      <Filter>File di intestazione\concurrency</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\headers\concurrency\WaitResult.h">
+      <Filter>File di intestazione\concurrency</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -255,6 +261,9 @@
       <Filter>File di origine\concurrency</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\concurrency\InterprocessQueue.cpp">
+      <Filter>File di origine\concurrency</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\concurrency\InterprocessSignal.cpp">
       <Filter>File di origine\concurrency</Filter>
     </ClCompile>
   </ItemGroup>
